# chief-of-staff

./: .replit  MI_WATCHLIST.json  complianceworxs-homepage-singlefile.html  complianceworxs-homepage-v2.html  coo_brief_enhanced.py  cw-experiments.js  debug-ai.html  design_guidelines.md  package-lock.json  package.json  policy.json  pyproject.toml  replit.md
attached_assets/: CEO_Directive_Master_Playbook_FULL_1755537756609.docx  General Pharmaceutical Groups_1764325395684.docx  Pasted--Agent-Name-MetaAgentOrchestrator-Mission-Monitor-audit-and-align-the-outputs-of-all-autonomou-1753911591132_1753911591133.txt  Pasted--ComplianceWorxs-Experiment-OS-single-file-Replit-ready-Agents-run-daily-tests-tie-actions-1756050601319_1756050601320.txt  Pasted--ComplianceWorxs-Experiment-OS-single-file-Replit-ready-Agents-run-daily-tests-tie-actions-1756050681643_1756050681644.txt  Pasted--Create-a-Python-sender-script-that-fills-placeholders-and-emails-the-CEO-Autonomy-Checklist-weekly-1756302867114_1756302867116.txt  Pasted--Market-Intelligence-ingest-and-score-playbook-integration-test-With-NO-CONFIG-retu-1755616956259_1755616956260.txt  Pasted--Shared-schema-all-agents-server-models-AgentState-ts-export-type-AgentId-ceo-coo--1755682822463_1755682822464.txt  Pasted--agent-Chief-of-Staff-Agent-Strategic-Alignment-Oversight-primary-goal-Ensure-e-1756294030580_1756294030581.txt  Pasted--app-core-actions-py-import-os-json-uuid-pathlib-import-os-json-uuid-pathlib-from-1755868950354_1755868950355.txt  Pasted--replit-build-a-pixel-faithful-STATIC-marketing-homepag_1766698993102.txt  (+118 more)
(+374 files in other folders)
